force-app/main/default/objects/Support_Level_Mapping__mdt/fields/Support_Tier__c.field-meta.xml
<CustomField>
    <fullName>Support_Tier__c</fullName>
    <label>Support Tier</label>
    <referenceTo>Support_Tier__mdt</referenceTo>
    <relationshipLabel>Support Level Mappings</relationshipLabel>
    <relationshipName>Support_Level_Mappings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>