force-app/main/default/objects/Support_Level_Mapping__mdt/fields/Support_Tier_Field__c.field-meta.xml
<CustomField>
    <fullName>Support_Tier_Field__c</fullName>
    <label>Support_Tier_Field</label>
    <metadataRelationshipControllingField>Support_Level_Mapping__mdt.Support_Tier_Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Support_Level_Mappings</relationshipLabel>
    <relationshipName>Support_Level_Mappings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>