force-app/main/default/objects/Support_Level_Mapping__mdt/fields/Support_Tier_Name__c.field-meta.xml
<CustomField>
    <fullName>Support_Tier_Name__c</fullName>
    <label>Support Tier Name</label>
    <length>10</length>
    <type>Text</type>
</CustomField>